changed both the files

--- a/CV/ObjectTracking/video_track_example.ipynb
+++ b/CV/ObjectTracking/video_track_example.ipynb
@@ -56,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/889 [00:00<13:59,  1.06it/s]/mnt/cephfs/hadoop-compute/phoenix/kpraja4/Code_Samples/model/Tracking/utils/sort.py:27: NumbaWarning: \u001b[1m\n",
+      "  0%|          | 1/889 [00:00<08:27,  1.75it/s]/mnt/cephfs/hadoop-compute/phoenix/kpraja4/Code_Samples/model/Tracking/utils/sort.py:27: NumbaWarning: \u001b[1m\n",
       "Compilation is falling back to object mode WITH looplifting enabled because Function \"iou\" failed type inference due to: \u001b[1m\u001b[1mnon-precise type pyobject\u001b[0m\n",
       "\u001b[0m\u001b[1mDuring: typing of argument at /mnt/cephfs/hadoop-compute/phoenix/kpraja4/Code_Samples/model/Tracking/utils/sort.py (32)\u001b[0m\n",
       "\u001b[1m\n",
@@ -87,7 +87,7 @@
       "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
       "\u001b[0m\n",
       "  state.func_ir.loc))\n",
-      "100%|█████████▉| 886/889 [02:14<00:00,  6.59it/s]\n"
+      "100%|█████████▉| 886/889 [02:05<00:00,  7.08it/s]"
      ]
     },
     {
@@ -95,6 +95,13 @@
      "output_type": "stream",
      "text": [
       "Video tracking result has been saved successfully at result_poc.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -134,9 +141,9 @@
        "      <td>0.0</td>\n",
        "      <td>[4, 3, 2, 1]</td>\n",
        "      <td>[2050, 1657, 1233, 1763]</td>\n",
-       "      <td>[327, 268, 191, 291]</td>\n",
+       "      <td>[2265, 1859, 1325, 2015]</td>\n",
        "      <td>[1252, 1226, 847, 1491]</td>\n",
-       "      <td>[296, 283, 210, 321]</td>\n",
+       "      <td>[1515, 1428, 925, 1691]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -144,9 +151,9 @@
        "      <td>1.0</td>\n",
        "      <td>[4, 3, 2, 1]</td>\n",
        "      <td>[2050, 1657, 1233, 1763]</td>\n",
-       "      <td>[327, 268, 191, 291]</td>\n",
+       "      <td>[2265, 1859, 1325, 2015]</td>\n",
        "      <td>[1252, 1226, 847, 1491]</td>\n",
-       "      <td>[296, 283, 210, 321]</td>\n",
+       "      <td>[1515, 1428, 925, 1691]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -154,9 +161,9 @@
        "      <td>2.0</td>\n",
        "      <td>[4, 3, 2, 1]</td>\n",
        "      <td>[2048, 1660, 1232, 1757]</td>\n",
-       "      <td>[326, 268, 191, 291]</td>\n",
+       "      <td>[2259, 1857, 1326, 2020]</td>\n",
        "      <td>[1243, 1221, 848, 1481]</td>\n",
-       "      <td>[295, 282, 211, 322]</td>\n",
+       "      <td>[1511, 1419, 927, 1697]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -164,9 +171,9 @@
        "      <td>3.0</td>\n",
        "      <td>[4, 3, 2, 1]</td>\n",
        "      <td>[2048, 1660, 1232, 1755]</td>\n",
-       "      <td>[326, 268, 191, 292]</td>\n",
+       "      <td>[2258, 1855, 1326, 2021]</td>\n",
        "      <td>[1241, 1221, 848, 1478]</td>\n",
-       "      <td>[295, 281, 211, 322]</td>\n",
+       "      <td>[1512, 1418, 928, 1700]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -174,9 +181,9 @@
        "      <td>4.0</td>\n",
        "      <td>[4, 3, 2, 1]</td>\n",
        "      <td>[2048, 1659, 1230, 1749]</td>\n",
-       "      <td>[324, 267, 191, 289]</td>\n",
+       "      <td>[2248, 1851, 1326, 2006]</td>\n",
        "      <td>[1247, 1216, 847, 1474]</td>\n",
-       "      <td>[294, 280, 211, 321]</td>\n",
+       "      <td>[1503, 1412, 929, 1691]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,12 +197,12 @@
        "3  [truck, car, car, car]    3.0  [4, 3, 2, 1]  [2048, 1660, 1232, 1755]   \n",
        "4  [truck, car, car, car]    4.0  [4, 3, 2, 1]  [2048, 1659, 1230, 1749]   \n",
        "\n",
-       "                     X2                       Y1                    Y2  \n",
-       "0  [327, 268, 191, 291]  [1252, 1226, 847, 1491]  [296, 283, 210, 321]  \n",
-       "1  [327, 268, 191, 291]  [1252, 1226, 847, 1491]  [296, 283, 210, 321]  \n",
-       "2  [326, 268, 191, 291]  [1243, 1221, 848, 1481]  [295, 282, 211, 322]  \n",
-       "3  [326, 268, 191, 292]  [1241, 1221, 848, 1478]  [295, 281, 211, 322]  \n",
-       "4  [324, 267, 191, 289]  [1247, 1216, 847, 1474]  [294, 280, 211, 321]  "
+       "                         X2                       Y1                       Y2  \n",
+       "0  [2265, 1859, 1325, 2015]  [1252, 1226, 847, 1491]  [1515, 1428, 925, 1691]  \n",
+       "1  [2265, 1859, 1325, 2015]  [1252, 1226, 847, 1491]  [1515, 1428, 925, 1691]  \n",
+       "2  [2259, 1857, 1326, 2020]  [1243, 1221, 848, 1481]  [1511, 1419, 927, 1697]  \n",
+       "3  [2258, 1855, 1326, 2021]  [1241, 1221, 848, 1478]  [1512, 1418, 928, 1700]  \n",
+       "4  [2248, 1851, 1326, 2006]  [1247, 1216, 847, 1474]  [1503, 1412, 929, 1691]  "
       ]
      },
      "execution_count": 4,
@@ -210,8 +217,28 @@
     "sort_min_hits = 5\n",
     "thicknss = 2\n",
     "\n",
-    "logger = tracker.run(videopath, save_path,sort_max_age,sort_min_hits,thicknss,frame_cons=100000)\n",
+    "logger, fps = tracker.run(videopath, save_path,sort_max_age,sort_min_hits,thicknss,frame_cons=100000)\n",
     "logger.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58.679867986798676"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fps"
    ]
   },
   {
